logs
timestamp,message
1747291536368,"Traceback (most recent call last):
  File ""/opt/amazon/bin/runscript.py"", line 72, in <module>
    runpy.run_path(script, run_name='__main__')
  File ""/usr/local/lib/python3.10/runpy.py"", line 268, in run_path
"
1747291536398,"    code, fname = _get_code_from_file(run_name, path_name)
  File ""/usr/local/lib/python3.10/runpy.py"", line 242, in _get_code_from_file
"
1747291536399,"    code = compile(f.read(), fname, 'exec')
  File ""/tmp/Upsert_pyspark_v1.py"", line 194
    formatted_values.append(f""'{val.replace(""'"", ""''"")}'"")
                                                        ^
SyntaxError: unterminated string literal (detected at line 194)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File ""/opt/amazon/bin/runscript.py"", line 105, in <module>
"
1747291536399,"    while ""runpy.py"" in new_stack.tb_frame.f_code.co_filename:
AttributeError: 'NoneType' object has no attribute 'tb_frame'"
1747291536399,"
"
1747291541981,"Running autoDebugger shutdown hook.
"
